Matcap flip function does not work in 2.83 #74957

Closed
opened 2020-03-20 08:15:06 +01:00 by Chingiz Jumagulov · 6 comments

System Information
Operating system: Windows 10 x64
Graphics card: 1080 Nvidia GTX, 1070 Nvidia GTX

Blender Version
Broken: 2.83_d2c3544c5cb0-windows64
Worked: 2.82a

Short description of error
Hello wonderful blender team! It seems that flipping matcap does not work in recent blender 2.83 builds. It flips the matcap in the small viewport shading panel. But does not flip it in the viewport itself.

Exact steps for others to reproduce the error

  1. Open latest build
  2. Create a model, Like Suzanne for example to check matcaps.
  3. Switch to shade smooth to see matcap effects more accurately
  4. Go to Viewport shading tab in the top right corner
    image.png
  5. Click on the button "Flip matcap"
  6. It flips the matcap in the small preview tab but not in actual view-port.
  7. Open older version of Blender 2.82a and press the same button and see the difference between view-ports.

Thank you for your work!

**System Information** Operating system: Windows 10 x64 Graphics card: 1080 Nvidia GTX, 1070 Nvidia GTX **Blender Version** Broken: 2.83_d2c3544c5cb0-windows64 Worked: 2.82a **Short description of error** Hello wonderful blender team! It seems that flipping matcap does not work in recent blender 2.83 builds. It flips the matcap in the small viewport shading panel. But does not flip it in the viewport itself. **Exact steps for others to reproduce the error** 1) Open latest build 2) Create a model, Like Suzanne for example to check matcaps. 3) Switch to shade smooth to see matcap effects more accurately 4) Go to Viewport shading tab in the top right corner ![image.png](https://archive.blender.org/developer/F8417214/image.png) 5) Click on the button "Flip matcap" 6) It flips the matcap in the small preview tab but not in actual view-port. 7) Open older version of Blender 2.82a and press the same button and see the difference between view-ports. Thank you for your work!

Added subscriber: @MeshVoid

Added subscriber: @MeshVoid

This issue was referenced by a6dd22d431

This issue was referenced by a6dd22d4311ce0265bd7678b68bff71c59404771
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-03-20 10:35:49 +01:00
Member

Can confirm.

Caused by c476c36e40.

Already have a fix for this (though not sure it is the best...), will post shortly.

Can confirm. Caused by c476c36e40. Already have a fix for this (though not sure it is the best...), will post shortly.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74957
No description provided.